Feat: Add slide out animation for popup

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Signika:wght@300..700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title> Bloxby </title>
-    <link rel = "icon" type = "image/png" href = "./src/assets/bloxy-favicn.png">
+    <link rel = "icon" type = "image/png" href = "./src/assets/bloxy-favicn (2).png">
   </head>
   <body>
     <div id="root"></div>
